<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_title_request_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/text_ola_passageiro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_subtitle_request_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_para_onde_vamos"
        app:layout_constraintStart_toStartOf="@id/textview_title_request_trip"
        app:layout_constraintTop_toBottomOf="@+id/textview_title_request_trip" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_id_user_request_trip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/text_informe_o_id_do_passageiro"
        app:layout_constraintEnd_toEndOf="@id/textview_title_request_trip"
        app:layout_constraintStart_toStartOf="@id/textview_title_request_trip"
        app:layout_constraintTop_toBottomOf="@id/textview_subtitle_request_trip">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_id_user_request_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintTextFieldSize"
            tools:text="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_origin_address_request_trip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_endereco_de_origem"
        app:layout_constraintEnd_toEndOf="@id/textfield_id_user_request_trip"
        app:layout_constraintStart_toStartOf="@id/textfield_id_user_request_trip"
        app:layout_constraintTop_toBottomOf="@id/textfield_id_user_request_trip">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_origin_address_request_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Av. Pres. Kenedy, 2385 - Remédios, Osasco - SP, 02675-031"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_destination_address_request_trip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_endereco_destino"
        app:layout_constraintEnd_toEndOf="@id/textfield_origin_address_request_trip"
        app:layout_constraintStart_toStartOf="@id/textfield_origin_address_request_trip"
        app:layout_constraintTop_toBottomOf="@id/textfield_origin_address_request_trip">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_destination_address_request_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Av. Paulista, 1538 - Bela Vista, São Paulo - SP, 01310-200"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textview_error_request_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_error"
        app:layout_constraintStart_toStartOf="@id/textfield_destination_address_request_trip"
        app:layout_constraintTop_toBottomOf="@id/textfield_destination_address_request_trip"
        tools:text="Os campos são iguais" />

    <Button
        android:id="@+id/button_request_trip"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/text_solicitar_viagem"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/textfield_destination_address_request_trip"
        app:layout_constraintTop_toBottomOf="@id/textview_error_request_trip"
        tools:ignore="TextContrastCheck" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_request_trip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_request_trip" />

</androidx.constraintlayout.widget.ConstraintLayout>